// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.models.orders should call GetOrder 1`] = `
Array [
  Object {
    "amazonOrderId": "902-3159896-1390916",
    "buyerCounty": null,
    "buyerEmail": null,
    "buyerName": null,
    "buyerTaxInfo": null,
    "defaultShipFromLocationAddress": null,
    "earliestDeliveryDate": null,
    "earliestShipDate": 2017-01-20T19:51:16.000Z,
    "easyShipShipmentStatus": null,
    "fulfillmentChannel": "MFN",
    "isBusinessOrder": false,
    "isEstimatedShipDateSet": null,
    "isGlobalExpressEnabled": false,
    "isPremiumOrder": false,
    "isPrime": false,
    "isReplacementOrder": null,
    "isSoldByAB": null,
    "lastUpdateDate": 2017-01-20T19:49:35.000Z,
    "latestDeliveryDate": null,
    "latestShipDate": 2017-01-25T19:49:35.000Z,
    "marketplaceId": "ATVPDKIKX0DER",
    "numberOfItemsShipped": 0,
    "numberOfItemsUnshipped": 0,
    "orderChannel": null,
    "orderStatus": "Pending",
    "orderTotal": null,
    "orderType": "StandardOrder",
    "paymentExecutionDetail": Array [],
    "paymentMethod": "Other",
    "paymentMethodDetails": Array [
      "CreditCard",
      "GiftCerificate",
    ],
    "promiseResponseDueDate": null,
    "purchaseDate": 2017-01-20T19:49:35.000Z,
    "purchaseOrderNumber": null,
    "replacedOrderId": null,
    "salesChannel": null,
    "sellerOrderId": null,
    "shipServiceLevel": null,
    "shipmentServiceLevelCategory": "Standard",
    "shippingAddress": null,
  },
]
`;

exports[`lib.client.models.orders should call ListOrders with marketplaceIds 1`] = `
Object {
  "createdBefore": null,
  "lastUpdatedBefore": 2017-02-25T18:10:21.687Z,
  "nextToken": "2YgYW55IGNhcm5hbCBwbGVhc3VyZS4=",
  "orders": Array [
    Object {
      "amazonOrderId": "902-3159896-1390916",
      "buyerCounty": null,
      "buyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.com",
      "buyerName": "Buyer name",
      "buyerTaxInfo": Object {
        "companyLegalName": "Company Name",
        "taxClassifications": Array [
          Object {
            "name": "VATNumber",
            "value": "XXX123",
          },
        ],
        "taxingRegion": "US",
      },
      "defaultShipFromLocationAddress": null,
      "earliestDeliveryDate": null,
      "earliestShipDate": 2017-02-20T19:51:16.000Z,
      "easyShipShipmentStatus": null,
      "fulfillmentChannel": "MFN",
      "isBusinessOrder": true,
      "isEstimatedShipDateSet": null,
      "isGlobalExpressEnabled": false,
      "isPremiumOrder": false,
      "isPrime": false,
      "isReplacementOrder": null,
      "isSoldByAB": null,
      "lastUpdateDate": 2017-02-20T19:49:35.000Z,
      "latestDeliveryDate": null,
      "latestShipDate": 2017-02-25T19:49:35.000Z,
      "marketplaceId": "ATVPDKIKX0DER",
      "numberOfItemsShipped": 0,
      "numberOfItemsUnshipped": 1,
      "orderChannel": null,
      "orderStatus": "Unshipped",
      "orderTotal": Object {
        "amount": 25,
        "currencyCode": "USD",
      },
      "orderType": "StandardOrder",
      "paymentExecutionDetail": Array [],
      "paymentMethod": "Other",
      "paymentMethodDetails": Array [
        "CreditCard",
      ],
      "promiseResponseDueDate": null,
      "purchaseDate": 2017-02-20T19:49:35.000Z,
      "purchaseOrderNumber": "PO12345678",
      "replacedOrderId": null,
      "salesChannel": "Amazon.com",
      "sellerOrderId": null,
      "shipServiceLevel": null,
      "shipmentServiceLevelCategory": null,
      "shippingAddress": Object {
        "addressType": "Commercial",
        "adressLine1": "1234 Any St.",
        "adressLine2": null,
        "adressLine3": null,
        "city": "Seattle",
        "countryCode": "US",
        "county": null,
        "district": null,
        "name": "Buyer name",
        "phone": null,
        "postalCode": "98103",
        "stateOrRegion": null,
      },
    },
    Object {
      "amazonOrderId": "483-3488972-0896720",
      "buyerCounty": "Vila Olimpia",
      "buyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.com.br",
      "buyerName": "John Jones",
      "buyerTaxInfo": Object {
        "companyLegalName": null,
        "taxClassifications": Array [
          Object {
            "name": "CSTNumber",
            "value": "XXX123",
          },
        ],
        "taxingRegion": "BR",
      },
      "defaultShipFromLocationAddress": null,
      "earliestDeliveryDate": null,
      "earliestShipDate": 2017-02-20T19:51:16.000Z,
      "easyShipShipmentStatus": null,
      "fulfillmentChannel": "MFN",
      "isBusinessOrder": false,
      "isEstimatedShipDateSet": null,
      "isGlobalExpressEnabled": false,
      "isPremiumOrder": false,
      "isPrime": false,
      "isReplacementOrder": null,
      "isSoldByAB": null,
      "lastUpdateDate": 2017-02-20T19:49:35.000Z,
      "latestDeliveryDate": null,
      "latestShipDate": 2017-02-25T19:49:35.000Z,
      "marketplaceId": "A2Q3Y263D00KWC",
      "numberOfItemsShipped": 0,
      "numberOfItemsUnshipped": 1,
      "orderChannel": null,
      "orderStatus": "Unshipped",
      "orderTotal": Object {
        "amount": 100,
        "currencyCode": "BRL",
      },
      "orderType": null,
      "paymentExecutionDetail": Array [],
      "paymentMethod": "Other",
      "paymentMethodDetails": Array [
        "CreditCard",
      ],
      "promiseResponseDueDate": null,
      "purchaseDate": Date { NaN },
      "purchaseOrderNumber": null,
      "replacedOrderId": null,
      "salesChannel": null,
      "sellerOrderId": null,
      "shipServiceLevel": null,
      "shipmentServiceLevelCategory": null,
      "shippingAddress": Object {
        "addressType": "Residential",
        "adressLine1": "1234 Avenida Qualquer",
        "adressLine2": null,
        "adressLine3": null,
        "city": "Sao Paulo",
        "countryCode": "BR",
        "county": null,
        "district": null,
        "name": "Buyer name",
        "phone": null,
        "postalCode": "08474-130",
        "stateOrRegion": null,
      },
    },
    Object {
      "amazonOrderId": "058-1233752-8214740",
      "buyerCounty": null,
      "buyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.co.jp",
      "buyerName": "Jane Smith",
      "buyerTaxInfo": null,
      "defaultShipFromLocationAddress": null,
      "earliestDeliveryDate": null,
      "earliestShipDate": null,
      "easyShipShipmentStatus": null,
      "fulfillmentChannel": "MFN",
      "isBusinessOrder": false,
      "isEstimatedShipDateSet": true,
      "isGlobalExpressEnabled": false,
      "isPremiumOrder": false,
      "isPrime": false,
      "isReplacementOrder": null,
      "isSoldByAB": null,
      "lastUpdateDate": 2017-02-07T12:43:16.000Z,
      "latestDeliveryDate": null,
      "latestShipDate": null,
      "marketplaceId": "A1VC38T7YXB528",
      "numberOfItemsShipped": 0,
      "numberOfItemsUnshipped": 1,
      "orderChannel": null,
      "orderStatus": "Unshipped",
      "orderTotal": Object {
        "amount": 1507,
        "currencyCode": "JPY",
      },
      "orderType": "SourcingOnDemandOrder",
      "paymentExecutionDetail": Array [
        Object {
          "payment": Object {
            "amount": 10,
            "currencyCode": "JPY",
          },
          "paymentMethod": "PointsAccount",
        },
        Object {
          "payment": Object {
            "amount": 317,
            "currencyCode": "JPY",
          },
          "paymentMethod": "GC",
        },
        Object {
          "payment": Object {
            "amount": 1180,
            "currencyCode": "JPY",
          },
          "paymentMethod": "COD",
        },
      ],
      "paymentMethod": "COD",
      "paymentMethodDetails": Array [
        "COD",
      ],
      "promiseResponseDueDate": 2017-08-31T23:58:44.000Z,
      "purchaseDate": 2017-02-05T00:06:07.000Z,
      "purchaseOrderNumber": null,
      "replacedOrderId": null,
      "salesChannel": null,
      "sellerOrderId": null,
      "shipServiceLevel": "Std JP Kanto8",
      "shipmentServiceLevelCategory": "Standard",
      "shippingAddress": Object {
        "addressType": null,
        "adressLine1": "1-2-10 Akasaka",
        "adressLine2": null,
        "adressLine3": null,
        "city": "Tokyo",
        "countryCode": "JP",
        "county": null,
        "district": null,
        "name": "Jane Smith",
        "phone": null,
        "postalCode": "107-0053",
        "stateOrRegion": null,
      },
    },
  ],
}
`;

exports[`lib.client.models.orders should call ListOrders without marketplaceIds 1`] = `
Object {
  "createdBefore": null,
  "lastUpdatedBefore": 2017-02-25T18:10:21.687Z,
  "nextToken": "2YgYW55IGNhcm5hbCBwbGVhc3VyZS4=",
  "orders": Array [
    Object {
      "amazonOrderId": "902-3159896-1390916",
      "buyerCounty": null,
      "buyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.com",
      "buyerName": "Buyer name",
      "buyerTaxInfo": Object {
        "companyLegalName": "Company Name",
        "taxClassifications": Array [
          Object {
            "name": "VATNumber",
            "value": "XXX123",
          },
        ],
        "taxingRegion": "US",
      },
      "defaultShipFromLocationAddress": Object {
        "addressType": null,
        "adressLine1": "15606 NE Any street",
        "adressLine2": "Suite 2",
        "adressLine3": null,
        "city": "Redmond",
        "countryCode": "US",
        "county": null,
        "district": null,
        "name": "Seller name",
        "phone": "555 555-5555",
        "postalCode": "98052",
        "stateOrRegion": "WA",
      },
      "earliestDeliveryDate": null,
      "earliestShipDate": 2017-02-20T19:51:16.000Z,
      "easyShipShipmentStatus": null,
      "fulfillmentChannel": "MFN",
      "isBusinessOrder": true,
      "isEstimatedShipDateSet": null,
      "isGlobalExpressEnabled": false,
      "isPremiumOrder": false,
      "isPrime": false,
      "isReplacementOrder": null,
      "isSoldByAB": null,
      "lastUpdateDate": 2017-02-20T19:49:35.000Z,
      "latestDeliveryDate": null,
      "latestShipDate": 2017-02-25T19:49:35.000Z,
      "marketplaceId": "ATVPDKIKX0DER",
      "numberOfItemsShipped": 0,
      "numberOfItemsUnshipped": 1,
      "orderChannel": null,
      "orderStatus": "Unshipped",
      "orderTotal": Object {
        "amount": 25,
        "currencyCode": "USD",
      },
      "orderType": "StandardOrder",
      "paymentExecutionDetail": Array [],
      "paymentMethod": "Other",
      "paymentMethodDetails": Array [
        "CreditCard",
      ],
      "promiseResponseDueDate": null,
      "purchaseDate": 2017-02-20T19:49:35.000Z,
      "purchaseOrderNumber": "PO12345678",
      "replacedOrderId": null,
      "salesChannel": "Amazon.com",
      "sellerOrderId": null,
      "shipServiceLevel": null,
      "shipmentServiceLevelCategory": null,
      "shippingAddress": Object {
        "addressType": "Commercial",
        "adressLine1": "1234 Any St.",
        "adressLine2": null,
        "adressLine3": null,
        "city": "Seattle",
        "countryCode": "US",
        "county": null,
        "district": null,
        "name": "Buyer name",
        "phone": null,
        "postalCode": "98103",
        "stateOrRegion": "WA",
      },
    },
    Object {
      "amazonOrderId": "483-3488972-0896720",
      "buyerCounty": "Vila Olimpia",
      "buyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.com.br",
      "buyerName": "John Jones",
      "buyerTaxInfo": Object {
        "companyLegalName": null,
        "taxClassifications": Array [
          Object {
            "name": "CSTNumber",
            "value": "XXX123",
          },
        ],
        "taxingRegion": "BR",
      },
      "defaultShipFromLocationAddress": null,
      "earliestDeliveryDate": null,
      "earliestShipDate": 2017-02-20T19:51:16.000Z,
      "easyShipShipmentStatus": null,
      "fulfillmentChannel": "MFN",
      "isBusinessOrder": false,
      "isEstimatedShipDateSet": null,
      "isGlobalExpressEnabled": false,
      "isPremiumOrder": false,
      "isPrime": false,
      "isReplacementOrder": null,
      "isSoldByAB": null,
      "lastUpdateDate": 2017-02-20T19:49:35.000Z,
      "latestDeliveryDate": null,
      "latestShipDate": 2017-02-25T19:49:35.000Z,
      "marketplaceId": "A2Q3Y263D00KWC",
      "numberOfItemsShipped": 0,
      "numberOfItemsUnshipped": 1,
      "orderChannel": null,
      "orderStatus": "Unshipped",
      "orderTotal": Object {
        "amount": 100,
        "currencyCode": "BRL",
      },
      "orderType": null,
      "paymentExecutionDetail": Array [],
      "paymentMethod": "Other",
      "paymentMethodDetails": Array [
        "CreditCard",
      ],
      "promiseResponseDueDate": null,
      "purchaseDate": Date { NaN },
      "purchaseOrderNumber": null,
      "replacedOrderId": null,
      "salesChannel": null,
      "sellerOrderId": null,
      "shipServiceLevel": null,
      "shipmentServiceLevelCategory": null,
      "shippingAddress": Object {
        "addressType": "Residential",
        "adressLine1": "1234 Avenida Qualquer",
        "adressLine2": null,
        "adressLine3": null,
        "city": "Sao Paulo",
        "countryCode": "BR",
        "county": null,
        "district": null,
        "name": "Buyer name",
        "phone": null,
        "postalCode": "08474-130",
        "stateOrRegion": null,
      },
    },
    Object {
      "amazonOrderId": "058-1233752-8214740",
      "buyerCounty": null,
      "buyerEmail": "5vlhEXAMPLEh9h5@marketplace.amazon.co.jp",
      "buyerName": "Jane Smith",
      "buyerTaxInfo": null,
      "defaultShipFromLocationAddress": null,
      "earliestDeliveryDate": null,
      "earliestShipDate": null,
      "easyShipShipmentStatus": null,
      "fulfillmentChannel": "MFN",
      "isBusinessOrder": false,
      "isEstimatedShipDateSet": true,
      "isGlobalExpressEnabled": false,
      "isPremiumOrder": false,
      "isPrime": false,
      "isReplacementOrder": null,
      "isSoldByAB": null,
      "lastUpdateDate": 2017-02-07T12:43:16.000Z,
      "latestDeliveryDate": null,
      "latestShipDate": null,
      "marketplaceId": "A1VC38T7YXB528",
      "numberOfItemsShipped": 0,
      "numberOfItemsUnshipped": 1,
      "orderChannel": null,
      "orderStatus": "Unshipped",
      "orderTotal": Object {
        "amount": 1507,
        "currencyCode": "JPY",
      },
      "orderType": "SourcingOnDemandOrder",
      "paymentExecutionDetail": Array [
        Object {
          "payment": Object {
            "amount": 10,
            "currencyCode": "JPY",
          },
          "paymentMethod": "PointsAccount",
        },
        Object {
          "payment": Object {
            "amount": 317,
            "currencyCode": "JPY",
          },
          "paymentMethod": "GC",
        },
        Object {
          "payment": Object {
            "amount": 1180,
            "currencyCode": "JPY",
          },
          "paymentMethod": "COD",
        },
      ],
      "paymentMethod": "COD",
      "paymentMethodDetails": Array [
        "COD",
      ],
      "promiseResponseDueDate": 2017-08-31T23:58:44.000Z,
      "purchaseDate": 2017-02-05T00:06:07.000Z,
      "purchaseOrderNumber": null,
      "replacedOrderId": null,
      "salesChannel": null,
      "sellerOrderId": null,
      "shipServiceLevel": "Std JP Kanto8",
      "shipmentServiceLevelCategory": "Standard",
      "shippingAddress": Object {
        "addressType": null,
        "adressLine1": "1-2-10 Akasaka",
        "adressLine2": null,
        "adressLine3": null,
        "city": "Tokyo",
        "countryCode": "JP",
        "county": null,
        "district": null,
        "name": "Jane Smith",
        "phone": null,
        "postalCode": "107-0053",
        "stateOrRegion": null,
      },
    },
  ],
}
`;
